# PicoCare

./: CMakeLists.txt  README.md  ecg.c  hc06.c  hc06.h  main.c
Doc/html/: doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hc06_8c.html  hc06_8h.html  hc06_8h_source.html  main_8c.html
Doc/html/search/: all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js  variables_0.js
Doc/latex/: files.tex  hc06_8c.tex  hc06_8h.tex  hc06_8h_source.tex  main_8c.tex  refman.tex
